fixed about overlaying articles on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -372,7 +372,7 @@ body {
 }
 
 .zUp {
-    z-index: 100;
+    z-index: 1001;
 }
 
 .myPic {
